--- a/Skillfactory/PY_10_Введение_в_Pandas/Введение _в_Pandas.ipynb
+++ b/Skillfactory/PY_10_Введение_в_Pandas/Введение _в_Pandas.ipynb
@@ -2,22 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "python 3.10\n",
-      "NumPy 1.23.0\n"
+      "Python 3.10\n",
+      "NumPy 1.23.0\n",
+      "Pandas 1.4.3\n"
      ]
     }
    ],
    "source": [
-    "print(f'python {sys.version_info.major}.{sys.version_info.minor}')\n",
+    "import sys\n",
+    "print(f'Python {sys.version_info.major}.{sys.version_info.minor}')\n",
     "import numpy as np\n",
-    "print(f'NumPy {np.__version__}')\n"
+    "print(f'NumPy {np.__version__}')\n",
+    "import pandas as pd\n",
+    "print(f'Pandas {pd.__version__}')\n"
    ]
   }
  ],
