"Axis" и "Доступ к данным"

--- a/Skillfactory/PY_10_Введение_в_Pandas/Введение _в_Pandas.ipynb
+++ b/Skillfactory/PY_10_Введение_в_Pandas/Введение _в_Pandas.ipynb
@@ -57,7 +57,7 @@
     "    o { color: orangered}\n",
     "</style>\n",
     "\n",
-    "### <o>***Series***</o> — это упорядоченная изменяемая коллекция объектов, имеющая так называемые ассоциативные метки (индексы). \n",
+    "## <o>***Series***</o> — это упорядоченная изменяемая коллекция объектов, имеющая так называемые ассоциативные метки (индексы). \n",
     "#### Есть два способа создания ***Series***\n",
     "\n",
     "##### Первый способ:\n"
@@ -178,7 +178,425 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### *На самом деле ***loc*** и ***iloc*** можно опустить и обращаться к элементам ***Series*** напрямую по индексам, например ***countries[[‘UK’, 'US', ‘UA’]]*** или ***countries[[0, 2, 4]]***. Оба варианта являются равноправными для ***Series***, однако в дальнейшем мы будем использовать эти операции при обращении к более сложной структуре — ***DataFrame***, а в контексте этой структуры эти варианты уже неравноправны.*"
+    "На самом деле ***`loc`*** и ***`iloc`*** можно опустить и обращаться к элементам ***`Series`*** напрямую по индексам, например ***`countries[[‘UK’, 'US', ‘UA’]]`*** или ***`countries[[0, 2, 4]]`***. Оба варианта являются равноправными для ***`Series`***, однако в дальнейшем мы будем использовать эти операции при обращении к более сложной структуре — ***`DataFrame`***, а в контексте этой структуры эти варианты уже неравноправны.*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<style>\n",
+    "    b { color: royalblue} \n",
+    "    o { color: orangered}\n",
+    "</style>\n",
+    "\n",
+    "\n",
+    "## <o>DataFrame</o>  как структура данных\n",
+    "\n",
+    "> #### <b>Примечание.</b> В дальнейшем слова *`DataFrame`* и *`таблица`* будут употребляться как синонимы. Также синонимами в Data Science являются слова *столбец таблицы* и *признак*.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "DataFrame создаётся с помощью функции **`pd.DataFrame()`**. Так же, как и для Series, для создания объектов DataFrame есть несколько способов:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Первый способ:\n",
+    "\n",
+    "##### Самый простой способ создания **`DataFrame`** — из словаря, **`ключами`** которого являются имена столбцов будущей таблицы, а **`значениями`** — списки, в которых хранится **`содержимое этих столбцов`**:\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country</th>\n",
+       "      <th>population</th>\n",
+       "      <th>square</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>UK</th>\n",
+       "      <td>Англия</td>\n",
+       "      <td>56.29</td>\n",
+       "      <td>133396</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CA</th>\n",
+       "      <td>Канада</td>\n",
+       "      <td>38.05</td>\n",
+       "      <td>9984670</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>US</th>\n",
+       "      <td>США</td>\n",
+       "      <td>322.28</td>\n",
+       "      <td>9826630</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>RU</th>\n",
+       "      <td>Россия</td>\n",
+       "      <td>146.24</td>\n",
+       "      <td>17125191</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>UA</th>\n",
+       "      <td>Украина</td>\n",
+       "      <td>45.50</td>\n",
+       "      <td>603628</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BY</th>\n",
+       "      <td>Беларусь</td>\n",
+       "      <td>9.50</td>\n",
+       "      <td>207600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>KZ</th>\n",
+       "      <td>Казахстан</td>\n",
+       "      <td>17.04</td>\n",
+       "      <td>2724902</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      country  population    square\n",
+       "UK     Англия       56.29    133396\n",
+       "CA     Канада       38.05   9984670\n",
+       "US        США      322.28   9826630\n",
+       "RU     Россия      146.24  17125191\n",
+       "UA    Украина       45.50    603628\n",
+       "BY   Беларусь        9.50    207600\n",
+       "KZ  Казахстан       17.04   2724902"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "countries_df = pd.DataFrame({\n",
+    "    'country': ['Англия', 'Канада', 'США', 'Россия', 'Украина', 'Беларусь', 'Казахстан'],\n",
+    "    'population': [56.29, 38.05, 322.28, 146.24, 45.5, 9.5, 17.04],\n",
+    "    'square': [133396, 9984670, 9826630, 17125191, 603628, 207600, 2724902]\n",
+    "})\n",
+    "\n",
+    "\n",
+    "countries_df.index = ['UK', 'CA', 'US', 'RU', 'UA', 'BY', 'KZ']\n",
+    "# можно добавить индексы самому\n",
+    "display(countries_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Второй способ:\n",
+    "\n",
+    "##### Также **`DataFrame`** можно создать из вложенного списка, внутренние списки которого будут являться строками новой таблицы:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country</th>\n",
+       "      <th>population</th>\n",
+       "      <th>square</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>UK</th>\n",
+       "      <td>Англия</td>\n",
+       "      <td>56.29</td>\n",
+       "      <td>133396</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CA</th>\n",
+       "      <td>Канада</td>\n",
+       "      <td>38.05</td>\n",
+       "      <td>9984670</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>US</th>\n",
+       "      <td>США</td>\n",
+       "      <td>322.28</td>\n",
+       "      <td>9826630</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>RU</th>\n",
+       "      <td>Россия</td>\n",
+       "      <td>146.24</td>\n",
+       "      <td>17125191</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>UA</th>\n",
+       "      <td>Украина</td>\n",
+       "      <td>45.50</td>\n",
+       "      <td>603628</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BY</th>\n",
+       "      <td>Беларусь</td>\n",
+       "      <td>9.50</td>\n",
+       "      <td>207600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>KZ</th>\n",
+       "      <td>Казахстан</td>\n",
+       "      <td>17.04</td>\n",
+       "      <td>2724902</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      country  population    square\n",
+       "UK     Англия       56.29    133396\n",
+       "CA     Канада       38.05   9984670\n",
+       "US        США      322.28   9826630\n",
+       "RU     Россия      146.24  17125191\n",
+       "UA    Украина       45.50    603628\n",
+       "BY   Беларусь        9.50    207600\n",
+       "KZ  Казахстан       17.04   2724902"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "countries_df = pd.DataFrame(\n",
+    "    data = [\n",
+    "        ['Англия', 56.29, 133396],\n",
+    "        ['Канада', 38.05, 9984670],\n",
+    "        ['США', 322.28, 9826630],\n",
+    "        ['Россия', 146.24, 17125191],\n",
+    "        ['Украина', 45.5, 603628],\n",
+    "        ['Беларусь', 9.5, 207600],\n",
+    "        ['Казахстан', 17.04, 2724902]\n",
+    "    ],\n",
+    "    columns= ['country', 'population', 'square'],\n",
+    "    index = ['UK', 'CA', 'US', 'RU', 'UA', 'BY', 'KZ']\n",
+    ")\n",
+    "display(countries_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<style>\n",
+    "    r { color: royalblue} \n",
+    "    o { color: orangered}\n",
+    "</style>\n",
+    "\n",
+    "\n",
+    "## <o>Axis</o> в <r>DataFrame</r>\n",
+    "\n",
+    "\n",
+    "\n",
+    ">При работе с Pandas важно уметь указывать направление работы метода, который используется. Для этого вводится понятие `axis` (ось, координата). Движение по строкам в таблице обозначается `axis` с индексом 0, а движение по столбцам — `axis` с индексом `1`.\n",
+    ">\n",
+    ">Данный параметр заложен во все методы, которые могут работать в двух направлениях и по умолчанию в большинстве из них `axis=0`, то есть они выполняют операции со строками, если не задавать `axis` вручную.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ***`mean()`*** — вычисление среднего по таблице\n",
+    "\n",
+    "##### Считаем **среднее по строкам** (axis = 0) в каждом столбце:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "population    9.070000e+01\n",
+      "square        5.800860e+06\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(countries_df.iloc[:,1:].mean(axis=0))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Считаем **среднее по столбцам** (axis = 1) в каждой строке:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "UK      66726.145\n",
+      "CA    4992354.025\n",
+      "US    4913476.140\n",
+      "RU    8562668.620\n",
+      "UA     301836.750\n",
+      "BY     103804.750\n",
+      "KZ    1362459.520\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(countries_df.iloc[:,1:].mean(axis=1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<style>\n",
+    "    r { color: royalblue} \n",
+    "    o { color: orangered}\n",
+    "</style>\n",
+    "## <o> Доступ к данным</o> в DataFrame\n",
+    "\n",
+    "##### Обратиться к DataFrame по **`индексу`** и указать имя столбца:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "UK     56.29\n",
+      "CA     38.05\n",
+      "US    322.28\n",
+      "RU    146.24\n",
+      "UA     45.50\n",
+      "BY      9.50\n",
+      "KZ     17.04\n",
+      "Name: population, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(countries_df['population'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Получим площадь Великобритании:\n",
+      "133396\n",
+      "\n",
+      "Получим население и площадь, соответствующие России:\n",
+      "population      146.24\n",
+      "square        17125191\n",
+      "Name: RU, dtype: object\n",
+      "\n",
+      "Сделаем вырезку из таблицы и получим информацию о населении и площади, соответствующую Украине, Беларуси и Казахстану:\n",
+      "    population   square\n",
+      "UA       45.50   603628\n",
+      "BY        9.50   207600\n",
+      "KZ       17.04  2724902\n",
+      "\n",
+      "или\n",
+      "    population   square\n",
+      "UA       45.50   603628\n",
+      "BY        9.50   207600\n",
+      "KZ       17.04  2724902\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Получим площадь Великобритании:')\n",
+    "print(countries_df.loc['UK', 'square'])\n",
+    "print()\n",
+    "print('Получим население и площадь, соответствующие России:')\n",
+    "print(countries_df.loc['RU', ['population', 'square']])\n",
+    "print()\n",
+    "print('Сделаем вырезку из таблицы и получим информацию о населении и площади, соответствующую Украине, Беларуси и Казахстану:')\n",
+    "print(countries_df.loc[['UA', 'BY', 'KZ'],['population', 'square']])\n",
+    "print()\n",
+    "print('или')\n",
+    "print(countries_df.iloc[4:8, 1:3])\n",
+    "\n"
    ]
   }
  ],
