--- a/Skillfactory/PY_10_Введение_в_Pandas/Задания_введения_в_Pandas.ipynb
+++ b/Skillfactory/PY_10_Введение_в_Pandas/Задания_введения_в_Pandas.ipynb
@@ -55,6 +55,86 @@
     "\n",
     "print(get_percent(medications, \"chlorhexidine\")) #37.5"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### <p style=\"color:orangered;\"> Задание 3.5 </p>\n",
+    "\n",
+    "Вы работаете аналитиком в компании ScienceYou. Ваша задача — проанализировать чистую прибыль.\n",
+    "\n",
+    "Доходы `(income)`, расходы `(expenses)` и годы `(years)`, соответствующие им, предоставлены вам в виде списков. \n",
+    "\n",
+    "Например:\n",
+    "\n",
+    "```python\n",
+    "income = [478, 512, 196]\n",
+    "expenses = [156, 130, 270]\n",
+    "years = [2018, 2019, 2020]\n",
+    "```\n",
+    "\n",
+    "Создайте функцию *`create_companyDF(income, expenses, years)`*, которая  возвращает *`DataFrame`*, составленный из входных данных со столбцами *`Income`* и *`Expenses`* и индексами, соответствующими годам рассматриваемого периода. Пример такого DataFrame представлен ниже.\n",
+    "\n",
+    "|      | Income | Expenses |\n",
+    "|:----:|:------:|:--------:|\n",
+    "| 2018 | 478    | 156      |\n",
+    "| 2019 | 512    | 130      |\n",
+    "| 2020 | 196    | 270      |\n",
+    "\n",
+    "\n",
+    "Также напишите функцию *`get_profit(df, year)`*, которая возвращает разницу между доходом и расходом, записанными в таблице *`df`*, за год *`year`*. Учтите, что если информация за запрашиваемый год не указана в вашей таблице, вам необходимо вернуть *`None`*.\n",
+    "\n",
+    ">Для проверки вхождения запрашиваемого года в перечень индексов таблицы вам поможет атрибут *`df.index`*, который возвращает список индексов таблицы."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-74\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "def create_companyDF(income, expenses, years):\n",
+    "    df = pd.DataFrame({\n",
+    "        'Income': income,\n",
+    "        'Expenses': expenses\n",
+    "    },\n",
+    "        index = years\n",
+    "    )\n",
+    "    return df\n",
+    "\n",
+    "\n",
+    "def get_profit(df, year):\n",
+    "    if not year in df.index:\n",
+    "        return None\n",
+    "    \n",
+    "    return (df.loc[year,'Income'] - df.loc[year,'Expenses'])\n",
+    "\n",
+    "\n",
+    "expenses = [156, 130, 270]\n",
+    "income = [478, 512, 196]\n",
+    "years = [2018, 2019, 2020]\n",
+    "\n",
+    "scienceyou = create_companyDF(income, expenses, years)\n",
+    "print(get_profit(scienceyou, 2020)) #-74\n"
+   ]
   }
  ],
  "metadata": {
