--- a/Skillfactory/PY_10_Введение_в_Pandas/Введение _в_Pandas.ipynb
+++ b/Skillfactory/PY_10_Введение_в_Pandas/Введение _в_Pandas.ipynb
@@ -57,7 +57,7 @@
     "    o { color: orangered}\n",
     "</style>\n",
     "\n",
-    "## <o>***Series***</o> — это упорядоченная изменяемая коллекция объектов, имеющая так называемые ассоциативные метки (индексы). \n",
+    "## ***<o>Series</o>*** — это упорядоченная изменяемая коллекция объектов, имеющая так называемые ассоциативные метки (индексы). \n",
     "#### Есть два способа создания ***Series***\n",
     "\n",
     "##### Первый способ:\n"
