--- a/Skillfactory/PY_10_Введение_в_Pandas/Введение _в_Pandas.ipynb
+++ b/Skillfactory/PY_10_Введение_в_Pandas/Введение _в_Pandas.ipynb
@@ -52,12 +52,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<style>\n",
-    "    b { color: royalblue} \n",
-    "    o { color: orangered}\n",
-    "</style>\n",
-    "\n",
-    "## ***<o>Series</o>*** — это упорядоченная изменяемая коллекция объектов, имеющая так называемые ассоциативные метки (индексы). \n",
+    "## <o style=\"color:orangered;\">Series</o> — это упорядоченная изменяемая коллекция объектов, имеющая так называемые ассоциативные метки (индексы). \n",
     "#### Есть два способа создания ***Series***\n",
     "\n",
     "##### Первый способ:\n"
