--- a/Skillfactory/PY_10_Введение_в_Pandas/Введение _в_Pandas.ipynb
+++ b/Skillfactory/PY_10_Введение_в_Pandas/Введение _в_Pandas.ipynb
@@ -52,7 +52,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <o style=\"color:orangered;\">Series</o> — это упорядоченная изменяемая коллекция объектов, имеющая так называемые ассоциативные метки (индексы). \n",
+    "## <b style=\"color:orangered;\">Series</b> — это упорядоченная изменяемая коллекция объектов, имеющая так называемые ассоциативные метки (индексы). \n",
     "#### Есть два способа создания ***Series***\n",
     "\n",
     "##### Первый способ:\n"
