--- a/Skillfactory/PY_10_Введение_в_Pandas/Введение _в_Pandas.ipynb
+++ b/Skillfactory/PY_10_Введение_в_Pandas/Введение _в_Pandas.ipynb
@@ -136,12 +136,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<style>\n",
-    "    b { color: royalblue} \n",
-    "    o { color: orangered}\n",
-    "</style>\n",
-    "##### <b>***.loc***</b> вызывается с квадратными скобками, в которые передаются метки. В него можно передать как один индекс, так и список, чтобы получилось несколько элементов. \n",
-    "##### <b>***.iloc***</b> также вызывается с квадратными скобками и принимает на вход порядковые номера элементов Series (нумерация начинаются с 0). В него можно так же передавать как один индекс, так и диапазон чисел. "
+    "##### ***<b style=\"color:royalblue;\">.loc</b>*** вызывается с квадратными скобками, в которые передаются метки. В него можно передать как один индекс, так и список, чтобы получилось несколько элементов. \n",
+    "##### ***<b style=\"color:royalblue;\">.iloc</b>*** также вызывается с квадратными скобками и принимает на вход порядковые номера элементов Series (нумерация начинаются с 0). В него можно так же передавать как один индекс, так и диапазон чисел. "
    ]
   },
   {
@@ -180,13 +176,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<style>\n",
-    "    b { color: royalblue} \n",
-    "    o { color: orangered}\n",
-    "</style>\n",
-    "\n",
-    "\n",
-    "## <o>DataFrame</o>  как структура данных\n",
+    "## <b style=\"color:orangered;\">DataFrame</b>  как структура данных\n",
     "\n",
     "> #### <b>Примечание.</b> В дальнейшем слова *`DataFrame`* и *`таблица`* будут употребляться как синонимы. Также синонимами в Data Science являются слова *столбец таблицы* и *признак*.\n"
    ]
@@ -437,13 +427,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<style>\n",
-    "    r { color: royalblue} \n",
-    "    o { color: orangered}\n",
-    "</style>\n",
-    "\n",
-    "\n",
-    "## <o>Axis</o> в <r>DataFrame</r>\n",
+    "## <b style=\"color:orangered;\">Axis</b> в DataFrame\n",
     "\n",
     "\n",
     "\n",
@@ -515,11 +499,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<style>\n",
-    "    r { color: royalblue} \n",
-    "    o { color: orangered}\n",
-    "</style>\n",
-    "## <o> Доступ к данным</o> в DataFrame\n",
+    "## <b style=\"color:orangered;\">Доступ к данным</b> в DataFrame\n",
     "\n",
     "##### Обратиться к DataFrame по **`индексу`** и указать имя столбца:"
    ]
