--- a/Skillfactory/PY_10_Введение_в_Pandas/Введение _в_Pandas.ipynb
+++ b/Skillfactory/PY_10_Введение_в_Pandas/Введение _в_Pandas.ipynb
@@ -136,8 +136,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### ***<b style=\"color:royalblue;\">.loc</b>*** вызывается с квадратными скобками, в которые передаются метки. В него можно передать как один индекс, так и список, чтобы получилось несколько элементов. \n",
-    "##### ***<b style=\"color:royalblue;\">.iloc</b>*** также вызывается с квадратными скобками и принимает на вход порядковые номера элементов Series (нумерация начинаются с 0). В него можно так же передавать как один индекс, так и диапазон чисел. "
+    "***<b style=\"color:royalblue;\">.loc</b>*** вызывается с квадратными скобками, в которые передаются метки. В него можно передать как один индекс, так и список, чтобы получилось несколько элементов. \n",
+    "***<b style=\"color:royalblue;\">.iloc</b>*** также вызывается с квадратными скобками и принимает на вход порядковые номера элементов Series (нумерация начинаются с 0). В него можно так же передавать как один индекс, так и диапазон чисел. "
    ]
   },
   {
@@ -192,9 +192,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Первый способ:\n",
+    "**Первый способ**:\n",
     "\n",
-    "##### Самый простой способ создания **`DataFrame`** — из словаря, **`ключами`** которого являются имена столбцов будущей таблицы, а **`значениями`** — списки, в которых хранится **`содержимое этих столбцов`**:\n",
+    "Самый простой способ создания **`DataFrame`** — из словаря, **`ключами`** которого являются имена столбцов будущей таблицы, а **`значениями`** — списки, в которых хранится **`содержимое этих столбцов`**:\n",
     "\n"
    ]
   },
@@ -308,9 +308,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Второй способ:\n",
+    "**Второй способ:**\n",
     "\n",
-    "##### Также **`DataFrame`** можно создать из вложенного списка, внутренние списки которого будут являться строками новой таблицы:"
+    "Также **`DataFrame`** можно создать из вложенного списка, внутренние списки которого будут являться строками новой таблицы:"
    ]
   },
   {
@@ -501,7 +501,7 @@
    "source": [
     "## <b style=\"color:orangered;\">Доступ к данным</b> в DataFrame\n",
     "\n",
-    "##### Обратиться к DataFrame по **`индексу`** и указать имя столбца:"
+    "Обратиться к DataFrame по **`индексу`** и указать имя столбца:"
    ]
   },
   {
