--- a/Skillfactory/PY_10_Введение_в_Pandas/Введение _в_Pandas.ipynb
+++ b/Skillfactory/PY_10_Введение_в_Pandas/Введение _в_Pandas.ipynb
@@ -53,9 +53,10 @@
    "metadata": {},
    "source": [
     "## <b style=\"color:orangered;\">Series</b> — это упорядоченная изменяемая коллекция объектов, имеющая так называемые ассоциативные метки (индексы). \n",
-    "#### Есть два способа создания ***Series***\n",
     "\n",
-    "##### Первый способ:\n"
+    "### Есть два способа создания ***Series***\n",
+    "\n",
+    "**Первый способ:**\n"
    ]
   },
   {
@@ -93,7 +94,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Второй способ:"
+    "**Второй способ:**"
    ]
   },
   {
@@ -136,8 +137,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***<b style=\"color:royalblue;\">.loc</b>*** вызывается с квадратными скобками, в которые передаются метки. В него можно передать как один индекс, так и список, чтобы получилось несколько элементов. \n",
-    "***<b style=\"color:royalblue;\">.iloc</b>*** также вызывается с квадратными скобками и принимает на вход порядковые номера элементов Series (нумерация начинаются с 0). В него можно так же передавать как один индекс, так и диапазон чисел. "
+    "### ***<b style=\"color:royalblue;\">.loc</b>*** вызывается с квадратными скобками, в которые передаются метки. В него можно передать как один индекс, так и список, чтобы получилось несколько элементов.\n",
+    "\n",
+    "### ***<b style=\"color:royalblue;\">.iloc</b>*** также вызывается с квадратными скобками и принимает на вход порядковые номера элементов Series (нумерация начинаются с 0). В него можно так же передавать как один индекс, так и диапазон чисел. "
    ]
   },
   {
@@ -169,7 +171,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "На самом деле ***`loc`*** и ***`iloc`*** можно опустить и обращаться к элементам ***`Series`*** напрямую по индексам, например ***`countries[[‘UK’, 'US', ‘UA’]]`*** или ***`countries[[0, 2, 4]]`***. Оба варианта являются равноправными для ***`Series`***, однако в дальнейшем мы будем использовать эти операции при обращении к более сложной структуре — ***`DataFrame`***, а в контексте этой структуры эти варианты уже неравноправны.*"
+    "### На самом деле ***`loc`*** и ***`iloc`*** можно опустить и обращаться к элементам ***`Series`*** напрямую по индексам, например ***`countries[[‘UK’, 'US', ‘UA’]]`*** или ***`countries[[0, 2, 4]]`***. Оба варианта являются равноправными для ***`Series`***, однако в дальнейшем мы будем использовать эти операции при обращении к более сложной структуре — ***`DataFrame`***, а в контексте этой структуры эти варианты уже неравноправны.*"
    ]
   },
   {
